--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 version: '3.3'
 
 services:
-  # 1. EVOLUTION API (Tu configuración base que SÍ funciona)
+  # 1. EVOLUTION API
   evolution_api:
     container_name: evolution_api
-    image: evoapicloud/evolution-api:latest # Usamos la que confirmaste que va bien
+    image: evoapicloud/evolution-api:latest
     restart: always
     depends_on:
       - redis
       - postgres
     ports:
-      - "${EVOLUTION_API_PORT:-8080}:8080"
+      # Mapea el puerto 44222 (externo) al 8080 (interno)
+      # Esto permite que Nginx le hable en el 44222
+      - "${EVOLUTION_API_PORT:-44222}:8080"
     volumes:
       - evolution_instances:/evolution/instances
     networks:
@@ -20,49 +22,40 @@ services:
     expose:
       - 8080
     environment:
-      # --- INYECCIÓN DE ESTABILIDAD PARA WINDOWS ---
-      # Agregamos esto a tu config funcional para asegurar que no se caiga mañana
-      
-
-      # 2. Timeouts Extendidos (Vital para WSL2)
+      # Timeouts vitales para evitar desconexiones
       - WEBSOCKET_TIMEOUT=120000
       - CONNECTION_TIMEOUT=30000
       - QRCODE_LIMIT=30
       - DEL_INSTANCE_ON_DISCONNECT=false
-
-      # 3. Disfraz (Para evitar el error 401 de desconexión)
-      - CONFIG_SESSION_PHONE_VERSION=
+      # Disfraz para WhatsApp
       - CONFIG_SESSION_PHONE_CLIENT="Evolution API"
       - CONFIG_SESSION_PHONE_NAME=Chrome
       - CONFIG_SESSION_OS=Ubuntu
-      
-      # 4. Configuración Segura de Redis
+      # Redis
       - CACHE_REDIS_ENABLED=true
       - CACHE_REDIS_URI=redis://redis:6379/0
       - CACHE_LOCAL_ENABLED=false
 
-  # 2. REDIS (Tu config original)
+  # 2. REDIS
   redis:
     image: redis:latest
     restart: always
     networks:
       - evolution-net
     container_name: redis
-    command: >
-      redis-server --port 6379 --appendonly yes
+    command: redis-server --port 6379 --appendonly yes
     volumes:
       - evolution_redis:/data
     ports:
       - "${REDIS_PORT:-6379}:6379"
 
-  # 3. POSTGRES (Tu config original)
+  # 3. POSTGRES
   postgres:
     container_name: postgres
     image: postgres:15
     networks:
       - evolution-net
-    command:
-      ["postgres", "-c", "max_connections=1000", "-c", "listen_addresses=*"]
+    command: ["postgres", "-c", "max_connections=1000", "-c", "listen_addresses=*"]
     restart: always
     ports:
       - "${POSTGRESS_PORT:-5432}:5432"
@@ -76,8 +69,7 @@ services:
     expose:
       - 5432
 
-  # 4. TU CEREBRO (AGREGADO: Python + Gemini)
-  # Este bloque es nuevo, necesario para que la IA funcione en tu red
+  # 4. TU CEREBRO (Python)
   mi-cerebro-py:
     build: ./cerebro
     container_name: cerebro_python
@@ -89,9 +81,9 @@ services:
     environment:
       - FLASK_APP=main.py
       - FLASK_ENV=production
-      # --- API KEYS ---
       - GOOGLE_API_KEY=AIzaSyAI1jz6RJFyUTzMXfvHlnFBrafSLJ7s3ls
-      # Nota: Usamos 'evolution_api' porque es el nombre del servicio en tu config
+      # IMPORTANTE: Aquí la URL interna es correcta (http://evolution_api:8080)
+      # porque se hablan de contenedor a contenedor
       - EVOLUTION_URL=http://evolution_api:8080
       - EVOLUTION_API_KEY=${AUTHENTICATION_API_KEY:-admin}
       - PORT=8000
