--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,11 @@ services:
     expose:
       - 8080
     environment:
+      # --- FIX: FORZAR PUERTO INTERNO ---
+      # Esto asegura que la app escuche en el 8080 dentro del contenedor
+      # para coincidir con el mapeo de puertos de Docker.
+      - SERVER_PORT=8080
+      
       # Timeouts vitales para evitar desconexiones
       - WEBSOCKET_TIMEOUT=120000
       - CONNECTION_TIMEOUT=30000
